# ai_movie

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run_app.py  setup.py
src/ai_movie/: __init__.py  __main__.py  cli.py
src/ai_movie/core/: __init__.py  config.py  exceptions.py  logging_config.py  validation.py  video_workflow.py
src/ai_movie/nodes/: __init__.py  bgm_addition.py  copywriting_generation.py  input_parsing.py  post_processing_node.py  quality_check.py  state.py  storyboard_generation.py  subtitle_generation.py  video_concatenation.py  video_generation.py  voiceover_generation.py
src/ai_movie/utils/: __init__.py  oss.py  oss_fix.py  rate_limiter.py  utils.py
src/ai_movie/web/: __init__.py  __main__.py  models.py  routes.py
src/ai_movie/web/static/: robots.txt
src/ai_movie/web/static/css/: enhanced.css
src/ai_movie/web/static/js/: accessibility.js  auth.js  concurrent_config.js  forms.js  main.js
src/ai_movie/web/templates/: base.html  dashboard.html  footer.html  home_content.html  index.html  login_modal.html  navbar.html  register_modal.html  sitemap.xml
tests/: __init__.py
